fixed header overflow with large text adjustment

--- a/src/styling/AccessibilityPanel.css
+++ b/src/styling/AccessibilityPanel.css
@@ -10,12 +10,14 @@
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
+  gap: 2vh;
   justify-content: space-around;
   padding: 1vh;
 }
 
 .accessibility-header {
   align-self: center;
+  margin: 1vh;
 }
 
 .accessibility-row {
